--- a/src/index.css
+++ b/src/index.css
@@ -111,7 +111,47 @@
 
 .adex-viewer .adex-preview-panel {
     display: grid;
-    grid-template-columns: 180px auto;
+    grid-template-columns: 44px 220px auto;
+}
+
+.adex-left-col {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 6px;
+    border-right: 1px solid rgba(0, 0, 0, .1)
+}
+
+.adex-left-col button {
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: 0.2s all ease-in-out;
+    border-radius: 5px;
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    line-height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #4e4e4e;
+}
+
+.adex-left-col button:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+    color: #000;
+}
+
+.subsidebar {
+    width: 0;
+    transition: .2s all ease-in-out;
+}
+
+.bookmarks-slide-in .adex-preview-bookmarks.subsidebar {
+    width: 100%;
+    transition: .2s all ease-in-out;
 }
 
 /* Improved text layer styles */
@@ -222,7 +262,7 @@
     background-color: #f7f7f7;
     border-right: 1px solid rgba(0, 0, 0, 0.1);
     scroll-behavior: smooth;
-    width: 250px;
+    width: 100%;
 }
 
 .adex-viewer .adex-preview-panel .adex-preview-search .adex-search-results-header {
@@ -376,7 +416,7 @@
 /* Sidebar slide animations */
 .thumbs-slide-in .adex-preview-panel {
     overflow: hidden;
-    grid-template-columns: 180px auto;
+    /* grid-template-columns: 30px 180px auto; */
     transition: 0.2s all ease;
 }
 
@@ -387,19 +427,24 @@
 
 .thumbs-slide-out .adex-preview-panel {
     overflow: hidden;
-    grid-template-columns: 0px auto;
+    grid-template-columns: 44px 0px auto;
     transition: 0.2s all ease;
 }
 
+.thumbs-slide-out .adex-left-col {
+    border-right: unset !important;
+}
+
+
 .thumbs-slide-out .adex-preview-panel .adex-preview-thumbs {
-    transform: translateX(-180px);
+    /* transform: translateX(-180px); */
     transition: 0.2s all ease;
 }
 
 /* Search sidebar slide animations */
 .search-slide-in .adex-preview-panel {
     overflow: hidden;
-    grid-template-columns: 180px 250px auto;
+    /* grid-template-columns: 30px 250px auto; */
     transition: 0.2s all ease;
 }
 
@@ -410,18 +455,18 @@
 
 .search-slide-out .adex-preview-panel {
     overflow: hidden;
-    grid-template-columns: 180px 0px auto;
+    /* grid-template-columns: 30px 180px 0px auto; */
     transition: 0.2s all ease;
 }
 
 .search-slide-out .adex-preview-panel .adex-preview-search {
-    transform: translateX(-250px);
+    /* transform: translateX(-250px); */
     transition: 0.2s all ease;
 }
 
 /* When both sidebars are closed */
 .thumbs-slide-out.search-slide-out .adex-preview-panel {
-    grid-template-columns: 0px 0px auto;
+    /* grid-template-columns: 30px 0px auto; */
 }
 
 @keyframes placeHolderShimmer {
@@ -854,6 +899,8 @@ ul.adex-pdf-meta-info-list {
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     align-items: center;
     justify-content: space-between;
+    flex-direction: column;
+    gap: 10px;
 }
 
 .adex-search-input-container {
@@ -1031,11 +1078,11 @@ ul.adex-pdf-meta-info-list {
 }
 
 .adex-mobile.search-slide-in .adex-preview-panel {
-    grid-template-columns: 0px 100% 0px;
+    /* grid-template-columns: 0px 100% 0px; */
 }
 
 .adex-mobile.search-slide-out .adex-preview-panel {
-    grid-template-columns: 0px 0px auto;
+    /* grid-template-columns: 0px 0px auto; */
 }
 
 /* Bookmarks and Outline sidebar */
@@ -1046,7 +1093,7 @@ ul.adex-pdf-meta-info-list {
     background-color: #f7f7f7;
     border-right: 1px solid rgba(0, 0, 0, 0.1);
     scroll-behavior: smooth;
-    width: 250px;
+    width: 100%;
 }
 
 .adex-viewer .adex-preview-panel .adex-preview-bookmarks .adex-bookmarks-header {
@@ -1324,7 +1371,7 @@ ul.adex-pdf-meta-info-list {
 /* Bookmarks sidebar slide animations */
 .bookmarks-slide-in .adex-preview-panel {
     overflow: hidden;
-    grid-template-columns: 180px 0px 250px auto;
+    /* grid-template-columns: 180px 0px 250px auto; */
     transition: 0.2s all ease;
 }
 
@@ -1335,18 +1382,18 @@ ul.adex-pdf-meta-info-list {
 
 .bookmarks-slide-out .adex-preview-panel {
     overflow: hidden;
-    grid-template-columns: 180px 0px 0px auto;
+    /* grid-template-columns: 30px 180px auto; */
     transition: 0.2s all ease;
 }
 
 .bookmarks-slide-out .adex-preview-panel .adex-preview-bookmarks {
-    transform: translateX(-250px);
+    /* transform: translateX(-250px); */
     transition: 0.2s all ease;
 }
 
 /* When all sidebars are closed */
 .thumbs-slide-out.search-slide-out.bookmarks-slide-out .adex-preview-panel {
-    grid-template-columns: 0px 0px 0px auto;
+    /* grid-template-columns: 30px 0px 0px auto; */
 }
 
 /* Mobile bookmarks sidebar styles */
@@ -1355,15 +1402,54 @@ ul.adex-pdf-meta-info-list {
 }
 
 .adex-mobile.bookmarks-slide-in .adex-preview-panel {
-    grid-template-columns: 0px 0px 100% 0px;
+    /* grid-template-columns: 0px 0px 100% 0px; */
 }
 
 .adex-mobile.bookmarks-slide-out .adex-preview-panel {
-    grid-template-columns: 0px 0px 0px auto;
+    /* grid-template-columns: 30px 0px 0px auto; */
 }
 
 /* Update fullscreen styles to include bookmarks sidebar */
 .adex-viewer.fullScreenView .adex-preview-panel .adex-preview-bookmarks {
     max-height: calc(100vh - 81px);
     min-height: calc(100vh - 81px);
+}
+
+.adex-control-zoom {
+    display: grid;
+    grid-template-columns: 30px auto 30px;
+    gap: 10px;
+}
+
+/*some more mess now*/
+.adex-search-bar {
+    padding: 7px;
+    gap: 0px;
+    position: sticky;
+    top: 0px;
+}
+
+input.adex-search-input {
+    background: #e9e9e9;
+    width: 100%;
+    border: none !important;
+    border-radius: unset;
+}
+
+button.adex-search-button {
+    background: #e9e9e9;
+    color: #000;
+    border: none !important;
+    border-radius: 0px;
+    transition: .2s all ease-in;
+    padding: 5px 8px;
+}
+
+button.adex-search-button svg {
+    width: 12px;
+}
+
+button.adex-search-button:hover {
+    background: #bcbbbb;
+    transition: .2s all ease-in;
 }
